main/default/objects/Case/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <label>Application</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compass Connect</fullName>
            </value>
            <value>
                <fullName>CCN</fullName>
                <label>Compass Change Navigator</label>
            </value>
            <value>
                <fullName>CPM</fullName>
                <label>Compass Project Manager</label>
            </value>
            <value>
                <fullName>CAPM</fullName>
                <label>Compass Agile Project Management</label>
            </value>
            <value>
                <fullName>AMZN</fullName>
                <label>AWS/Amazon Build</label>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>NCC</fullName>
            </value>
            <value>
                <fullName>Compass Change Navigator (CCN)</fullName>
                <isActive>false</isActive>
                <label>Compass Change Navigator (CCN)</label>
            </value>
            <value>
                <fullName>Compass Project Management (CPM)</fullName>
                <isActive>false</isActive>
                <label>Compass Project Management (CPM)</label>
            </value>
            <value>
                <fullName>Compass_Agile_Project_Management_CAPM</fullName>
                <isActive>false</isActive>
                <label>Compass_Agile_Project_Management_CAPM</label>
            </value>
            <value>
                <fullName>Compass_Change_Navigator_CCN</fullName>
                <isActive>false</isActive>
                <label>Compass_Change_Navigator_CCN</label>
            </value>
            <value>
                <fullName>Compass_Project_Management_CPM</fullName>
                <isActive>false</isActive>
                <label>Compass_Project_Management_CPM</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>