main/default/objects/Case/fields/Create_Project_Task__c.field-meta.xml
<CustomField>
    <fullName>Create_Project_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Project Task</label>
    <type>Checkbox</type>
</CustomField>