main/default/objects/Case/fields/DateConverted__c.field-meta.xml
<CustomField>
    <fullName>DateConverted__c</fullName>
    <label>Date Converted</label>
    <type>DateTime</type>
</CustomField>