main/default/objects/Case/fields/IT_Support_Description__c.field-meta.xml
<CustomField>
    <fullName>IT_Support_Description__c</fullName>
    <label>IT Support Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>