main/default/objects/Case/fields/IT_Support_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>IT_Support_Request_Type__c</fullName>
    <description>IT Support: Type of Request</description>
    <inlineHelpText>Please enter the type of request for IT Support</inlineHelpText>
    <label>IT Support Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Application System Error - Urgent</fullName>
            </value>
            <value>
                <fullName>Application System Error - Routine</fullName>
            </value>
            <value>
                <fullName>Application System Access - Correct Existing</fullName>
            </value>
            <value>
                <fullName>Application System Access - New Access</fullName>
            </value>
            <value>
                <fullName>Hardware issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>