main/default/objects/Case/fields/IT_Support_System__c.field-meta.xml
<CustomField>
    <fullName>IT_Support_System__c</fullName>
    <label>IT Support System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Office 365 (Word, Office, SharePoint, other)</fullName>
            </value>
            <value>
                <fullName>Nexonia</fullName>
            </value>
            <value>
                <fullName>Concur</fullName>
            </value>
            <value>
                <fullName>Netsuite</fullName>
            </value>
            <value>
                <fullName>iPhone</fullName>
            </value>
            <value>
                <fullName>Proliant</fullName>
            </value>
            <value>
                <fullName>Greenhouse</fullName>
            </value>
            <value>
                <fullName>TransAmerica</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>