main/default/objects/Case/fields/NCC_Partner_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>NCC_Partner_Request_Type__c</fullName>
    <inlineHelpText>Please select one of the reasons for the contact so we can ensure to route it to the correct person on our team.</inlineHelpText>
    <label>NCC Partner Request Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Change Cloud</fullName>
            </value>
            <value>
                <fullName>Consulting Services (Clinical)</fullName>
            </value>
            <value>
                <fullName>Consulting Services (Revenue Cycle)</fullName>
            </value>
            <value>
                <fullName>givebackRx</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>