main/default/objects/Case/fields/Onboarding_Automation_Error__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Automation_Error__c</fullName>
    <description>Field to get populated with any automation error encountered</description>
    <label>Onboarding Automation Error</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>