main/default/objects/Case/fields/Onboarding_Contact__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field to get populated with the newly created onboarding contact</description>
    <label>Onboarding Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>