main/default/objects/Case/fields/Onboarding_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Onboarding Email Sent</label>
    <type>Checkbox</type>
</CustomField>