main/default/objects/Case/fields/Onboarding_Project_Resource__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Project_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Onboarding Project Resource</label>
    <referenceTo>Krow__Project_Resources__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>