main/default/objects/Case/fields/Onboarding_User__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field to get populated with the newly created onboarding user</description>
    <label>Onboarding User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>