main/default/objects/Case/fields/Onboarding_User_Email__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_User_Email__c</fullName>
    <label>Onboarding User Email</label>
    <type>Email</type>
</CustomField>