main/default/objects/Case/recordTypes/Compass.recordType-meta.xml
<RecordType>
    <fullName>Compass</fullName>
    <active>true</active>
    <businessProcess>Compass</businessProcess>
    <label>Compass</label>
</RecordType>