main/default/objects/Case/recordTypes/Onboarding.recordType-meta.xml
<RecordType>
    <fullName>Onboarding</fullName>
    <active>true</active>
    <businessProcess>Onboarding</businessProcess>
    <description>Record type for new hire automation</description>
    <label>Onboarding</label>
</RecordType>