main/default/objects/Case/validationRules/ApplicationValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>ApplicationValidation</fullName>
    <active>false</active>
    <description>Whenever the case is closed the application is blank, add an error in the Application field &quot;Add a value&quot;.</description>
    <errorConditionFormula>IF(AND(OR(ISPICKVAL(Status, &apos;Closed&apos;),Create_Project_Task__c = true), ISBLANK(TEXT(Application__c))), true, false)</errorConditionFormula>
    <errorDisplayField>Application__c</errorDisplayField>
    <errorMessage>Add a value</errorMessage>
</ValidationRule>