main/default/objects/Case/validationRules/ProjectTaskValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>ProjectTaskValidation</fullName>
    <active>false</active>
    <description>Whenever the Case Type is New Feature and the Project Task is Blank, add an error to the Project Task field &quot;Add a value&quot;.</description>
    <errorConditionFormula>IF(AND(OR(ISPICKVAL(Type, &apos;New feature&apos;), ISPICKVAL(Type, &apos;Incident&apos;)), 
							ISBLANK(Project_Task__c), ISPICKVAL(Status, &apos;Closed&apos;), Create_Project_Task__c = false), true, false)</errorConditionFormula>
    <errorDisplayField>Project_Task__c</errorDisplayField>
    <errorMessage>Add a value</errorMessage>
</ValidationRule>