main/default/objects/Case/validationRules/Salesforce_Application_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Salesforce_Application_Validation</fullName>
    <active>true</active>
    <description>Whenever the Type = Incident or New Feature and the application is Salesforce, show an error.</description>
    <errorConditionFormula>IF(AND(OR(ISPICKVAL(Type, &apos;Incident&apos;),ISPICKVAL(Type, &apos;New feature&apos;)),OR(ISPICKVAL(Application__c, &apos;Salesforce&apos;))), true, false)</errorConditionFormula>
    <errorDisplayField>Application__c</errorDisplayField>
    <errorMessage>Salesforce is not valid application for this type. Please select a new application.</errorMessage>
</ValidationRule>