main/default/objects/Case/listViews/Compass_Support_Cases.listView-meta.xml
<ListView>
    <fullName>Compass_Support_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>OWNER_NAME</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Compass Support Cases All</label>
</ListView>