main/default/objects/Case/listViews/Compass_Support_Cases_Open.listView-meta.xml
<ListView>
    <fullName>Compass_Support_Cases_Open</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>OWNER_NAME</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Compass</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed,Converted</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>Compass Support</value>
    </filters>
    <label>Compass Support Cases Open</label>
    <sharedTo>
        <group>All_Users</group>
    </sharedTo>
</ListView>