main/default/objects/Case/listViews/NCC_Onboarding_Case.listView-meta.xml
<ListView>
    <fullName>NCC_Onboarding_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>NCC Onboarding</label>
    <queue>NCC_Onboarding</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>